--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
@@ -27,6 +28,8 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.15"
+    "@types/cors": "^2.8.15",
+    "@types/ejs": "^3.1.4",
+    "@types/nodemailer": "^6.4.13"
   }
 }
