--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
+    "nodemailer": "^6.9.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
