--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,9 @@
     "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.9",
+    "@types/socket.io": "^3.0.2",
+    "@types/validator": "^13.11.5",
+    "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
@@ -22,10 +25,14 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.4",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.7",
+    "socket.io": "^4.7.2",
+    "stripe": "^14.3.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
